* Inline like and reply links are now 9pt to avoid firefox shifting bug on hover/display * Twitter credentials overlay is now taller to accommodate firefox * Twitter credentials overlay now displays 'unauthenticated message' and 'dont worry notice' in 9pt instead of 8pt * Added 'as :user' to the 'also post to twitter' line where :user is a link that forces open the twitter credentials overlay

--- a/public/stylesheets/video.css
+++ b/public/stylesheets/video.css
@@ -292,7 +292,7 @@
 }
 
 .video .inline .body .reply a {
-	font-size: 8pt;
+	font-size: 9pt;
 }
 
 .video .inline:hover .reply {
@@ -304,7 +304,7 @@
 }
 
 .video .inline .like a {
-	font-size: 8pt;
+	font-size: 9pt;
 }
 
 .video .inline:hover .like {
